    then all transparent objects.  Previously this ordering was only done
    within subscenes, leading to rendering errors when transparent objects
    in one subscene were drawn before opaque objects in another.
  - renderRglwidget() and renderPlaywidget() now have an optional argument
    outputArgs for use in dynamic R Markdown documents.
  - rglwidget() now warns if an object has too many vertices
  - transparent spheres sometimes showed rendering
    artifacts because they were not drawn from back to front.  (Reported by Atte Tenkanen; original fix improved so nested
    spheres should now work.  WebGL display could still be
    improved.)
  - par3dinterp() did not always choose the best direction for interpolation
    of the userMatrix.
  - added an approximation to "polar" mouse controls to WebGL display.
  - the "centers" attribute now refers to the individual facets
    of spheres, rather than the whole sphere.  Use "vertices" for
    that.
  - The togglewidget() function didn't work properly in Shiny.
  - Tried to give a more helpful startup error message on MacOS.
  - Added documentation to rglwidgetClass in Javascript.
  - vertexSetter() can now set plane parameters.
  - Modified platform.cpp so it works with __STRICT_ANSI__
    defined.
  - Fixed addition of attribute to NULL
  - Fixed bug where textures or normals caused readOBJ() to fail;
    added support for reading normals.  Textures are still ignored.
  - As many browsers have dropped support for setting line width 
    in WebGL scenes, this has been partially redone in rglwidget() 
    code using a vertex shader.  
    Currently abclines3d(), lines3d() and segments3d() are supported
    (as well as functions that use them); wire3d() rendering of
    meshes and other methods that ask for "lines" drawing of
    polygons using the "front" or "back" material properties
    ignore lwd settings.  Line endings and joins are rounded.